Image and link correction
Changed linked in to github and resized and rounded image to prevent overlapping on smaller screen

--- a/CV.css
+++ b/CV.css
@@ -64,11 +64,12 @@ body{
 /*---about---*/
 .about{
     padding-top: 100px;
-    padding-bottom: 20px;
+    padding-bottom: 100px;
 }
 .profile-img{
     max-width: 100%;
     height: auto;
+    border-radius: 8px;
 }
 .nav-bar{
     top: 0;
